# antigravityd

./: .flake8  .gitignore  .markdownlint-cli2.yaml  AGENTS.md  CHANGELOG.md  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.agents/: skills.local.yaml.example
.agents/skills/cicd/: SKILL.md
.agents/skills/cicd/scripts/: portability-lint.sh  pr-status.sh  workflow.sh
.agents/skills/communicate/: SKILL.md
.agents/skills/communicate/scripts/: post-issue.sh
.agents/skills/communicate/scripts/templates/: skill-update-brief.md
.agents/skills/run-tests/: SKILL.md
.agents/skills/sonarclaude/: SKILL.md
.agents/skills/version-bump/: SKILL.md
.agents/skills/version-bump/scripts/: bump.py
.github/workflows/: publish.yml  tests.yml
antigravityd/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
